<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyActivity"
    android:background="#1774bf6a">

    <include layout="@layout/toolbarimagenes"
        android:id="@+id/tolbarguardar">

    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/nummolienda"
                android:id="@+id/textView1"
                android:layout_marginTop="15dp"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_num"
                android:inputType="number"
                android:hint="@string/nummolienda2"
                android:textStyle="italic"
                android:padding="15dp"
                 />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/fecha"
                android:id="@+id/textView2"
                android:layout_marginTop="15dp"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/et_fecha"
                android:inputType="date"
                android:hint="@string/fecha2"
                android:textStyle="italic"
                android:padding="5dp"

                android:enabled="false"
                android:textColor="#000"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selectfec"
                android:id="@+id/btn_date"
                android:layout_alignBottom="@+id/in_date"
                android:layout_toRightOf="@+id/in_date"
                android:layout_toEndOf="@+id/in_date"
                android:textAllCaps="false"
                android:padding="20dp"
                android:background="@drawable/abc_popup_background_mtrl_mult" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pagoobreros"
                android:id="@+id/textView3"
                android:layout_marginTop="15dp"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_pagobreros"
                android:inputType="number"
                android:hint="@string/pagoobreros2"
                android:textStyle="italic"
                android:padding="15dp"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pagotra"
                android:id="@+id/textView4"
                android:layout_marginTop="15dp"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_pagotra"
                android:hint="@string/pagotra2"
                android:inputType="number"
                android:textStyle="italic"
                android:padding="15dp"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/cantipa"
                android:id="@+id/textView5"
                android:layout_marginTop="15dp"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_cantiobt"
                android:hint="@string/cantipa2"
                android:inputType="text"
                android:textStyle="italic"
                android:padding="15dp"
                android:textSize="15sp"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/valorpa"
                android:id="@+id/textView6"
                android:layout_marginTop="15dp"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_valorobt"
                android:hint="@string/valorpa2"
                android:inputType="number"
                android:textStyle="italic"
                android:padding="15dp"
                android:textSize="15sp"
                 />



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/guardar"
                    android:id="@+id/btn_alta"
                    android:onClick="alta"
                    android:layout_weight="1"
                    android:textColor="#fff"
                    android:layout_marginRight="2dp"
                    android:textAllCaps="false"
                    android:background="#186f21"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/limpiar"
                    android:id="@+id/btn_consultar"
                    android:onClick="limpiar"
                    android:layout_weight="1"
                    android:textColor="#fff"
                    android:layout_marginRight="2dp"
                    android:textAllCaps="false"
                    android:background="#186f21"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelar"
                    android:id="@+id/btn_baja"
                    android:onClick="cancelar"
                    android:layout_weight="1"
                    android:textColor="#fff"
                    android:textAllCaps="false"
                    android:background="#186f21"/>
            </LinearLayout>



        </LinearLayout>
    </ScrollView>



</LinearLayout>


