<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#63e1eec5"
    tools:context="proyecto.sugarapp.Ubicacion">

    <include layout="@layout/toolbarimagenes"
        android:id="@+id/tolbarubicacion">

    </include>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prode"
        android:id="@+id/textView14"
        android:layout_below="@+id/scrollView"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:textColor="#000"
        android:textSize="18sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/porve"
        android:id="@+id/textView15"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="18sp"
    android:layout_below="@+id/textView14" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/conteubica"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView15">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:src="@drawable/iconomapa"
            android:layout_marginLeft="20dp"
            android:id="@+id/mapa"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ubica"
            android:id="@+id/textView16"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vereli"
            android:id="@+id/textView17"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="15sp"
            android:layout_below="@+id/textView16"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Garzón Huila"
            android:id="@+id/textView18"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="15sp"
           android:layout_below="@+id/textView17"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/propi"
        android:id="@+id/textView21"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="18sp"
     android:layout_below="@+id/conteubica"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Jesús Maria Morales"
        android:id="@+id/textView22"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_below="@+id/textView21"
        android:textColor="#000"
        android:textSize="15sp" />



    </LinearLayout>


</RelativeLayout>
